Kaggle Notebook | Generalization, Pruning and Cross-Validation | Version 3

--- a/07. Generalization, Pruning and Cross-Validation.ipynb
+++ b/07. Generalization, Pruning and Cross-Validation.ipynb
@@ -2,37 +2,54 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "80cf63af",
+   "id": "918a8c01",
    "metadata": {
     "papermill": {
-     "duration": 0.003471,
-     "end_time": "2025-09-24T15:55:31.094009",
+     "duration": 0.005876,
+     "end_time": "2025-09-24T15:58:14.128252",
      "exception": false,
-     "start_time": "2025-09-24T15:55:31.090538",
+     "start_time": "2025-09-24T15:58:14.122376",
      "status": "completed"
     },
     "tags": []
    },
    "source": [
-    "# <center>Lab Sheet 7</center> <center>Generalization, Pruning, and Cross-Validation</center>"
+    "# <center>Lab Sheet 7</center> "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "18f21b13",
+   "metadata": {
+    "papermill": {
+     "duration": 0.003746,
+     "end_time": "2025-09-24T15:58:14.136595",
+     "exception": false,
+     "start_time": "2025-09-24T15:58:14.132849",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "source": [
+    "# <center>Generalization, Pruning, and Cross-Validation</center>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "74a81f20",
+   "id": "093e30f9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-24T15:55:31.101716Z",
-     "iopub.status.busy": "2025-09-24T15:55:31.101366Z",
-     "iopub.status.idle": "2025-09-24T15:55:38.026471Z",
-     "shell.execute_reply": "2025-09-24T15:55:38.025504Z"
+     "iopub.execute_input": "2025-09-24T15:58:14.145296Z",
+     "iopub.status.busy": "2025-09-24T15:58:14.144987Z",
+     "iopub.status.idle": "2025-09-24T15:58:21.403802Z",
+     "shell.execute_reply": "2025-09-24T15:58:21.402676Z"
     },
     "papermill": {
-     "duration": 6.930756,
-     "end_time": "2025-09-24T15:55:38.028182",
+     "duration": 7.264189,
+     "end_time": "2025-09-24T15:58:21.405324",
      "exception": false,
-     "start_time": "2025-09-24T15:55:31.097426",
+     "start_time": "2025-09-24T15:58:14.141135",
      "status": "completed"
     },
     "tags": []
@@ -41,7 +58,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x797ae9d76330>"
+       "<torch._C.Generator at 0x7b1454f6e330>"
       ]
      },
      "execution_count": 1,
@@ -65,13 +82,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2daed88f",
+   "id": "b5b6dd96",
    "metadata": {
     "papermill": {
-     "duration": 0.002776,
-     "end_time": "2025-09-24T15:55:38.034449",
+     "duration": 0.002755,
+     "end_time": "2025-09-24T15:58:21.411439",
      "exception": false,
-     "start_time": "2025-09-24T15:55:38.031673",
+     "start_time": "2025-09-24T15:58:21.408684",
      "status": "completed"
     },
     "tags": []
@@ -83,19 +100,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "cf08b97a",
+   "id": "4ed13dc3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-24T15:55:38.042163Z",
-     "iopub.status.busy": "2025-09-24T15:55:38.041680Z",
-     "iopub.status.idle": "2025-09-24T15:55:38.099391Z",
-     "shell.execute_reply": "2025-09-24T15:55:38.098328Z"
+     "iopub.execute_input": "2025-09-24T15:58:21.418595Z",
+     "iopub.status.busy": "2025-09-24T15:58:21.418199Z",
+     "iopub.status.idle": "2025-09-24T15:58:21.476810Z",
+     "shell.execute_reply": "2025-09-24T15:58:21.475813Z"
     },
     "papermill": {
-     "duration": 0.063541,
-     "end_time": "2025-09-24T15:55:38.101145",
+     "duration": 0.06407,
+     "end_time": "2025-09-24T15:58:21.478482",
      "exception": false,
-     "start_time": "2025-09-24T15:55:38.037604",
+     "start_time": "2025-09-24T15:58:21.414412",
      "status": "completed"
     },
     "tags": []
@@ -113,13 +130,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75393210",
+   "id": "c15230e0",
    "metadata": {
     "papermill": {
-     "duration": 0.002687,
-     "end_time": "2025-09-24T15:55:38.107071",
+     "duration": 0.002856,
+     "end_time": "2025-09-24T15:58:21.484619",
      "exception": false,
-     "start_time": "2025-09-24T15:55:38.104384",
+     "start_time": "2025-09-24T15:58:21.481763",
      "status": "completed"
     },
     "tags": []
@@ -131,19 +148,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "70aaf91a",
+   "id": "4fa86b11",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-24T15:55:38.114393Z",
-     "iopub.status.busy": "2025-09-24T15:55:38.114013Z",
-     "iopub.status.idle": "2025-09-24T15:55:46.960691Z",
-     "shell.execute_reply": "2025-09-24T15:55:46.959565Z"
+     "iopub.execute_input": "2025-09-24T15:58:21.491909Z",
+     "iopub.status.busy": "2025-09-24T15:58:21.491569Z",
+     "iopub.status.idle": "2025-09-24T15:58:29.487629Z",
+     "shell.execute_reply": "2025-09-24T15:58:29.486507Z"
     },
     "papermill": {
-     "duration": 8.852316,
-     "end_time": "2025-09-24T15:55:46.962335",
+     "duration": 8.001582,
+     "end_time": "2025-09-24T15:58:29.489272",
      "exception": false,
-     "start_time": "2025-09-24T15:55:38.110019",
+     "start_time": "2025-09-24T15:58:21.487690",
      "status": "completed"
     },
     "tags": []
@@ -209,13 +226,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9fb5dbcf",
+   "id": "427bbfd0",
    "metadata": {
     "papermill": {
-     "duration": 0.003004,
-     "end_time": "2025-09-24T15:55:46.969386",
+     "duration": 0.003114,
+     "end_time": "2025-09-24T15:58:29.495931",
      "exception": false,
-     "start_time": "2025-09-24T15:55:46.966382",
+     "start_time": "2025-09-24T15:58:29.492817",
      "status": "completed"
     },
     "tags": []
@@ -227,19 +244,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e8cc5752",
+   "id": "f1c2e9a7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-24T15:55:46.977654Z",
-     "iopub.status.busy": "2025-09-24T15:55:46.977125Z",
-     "iopub.status.idle": "2025-09-24T15:55:47.778344Z",
-     "shell.execute_reply": "2025-09-24T15:55:47.777336Z"
+     "iopub.execute_input": "2025-09-24T15:58:29.503898Z",
+     "iopub.status.busy": "2025-09-24T15:58:29.503312Z",
+     "iopub.status.idle": "2025-09-24T15:58:30.264649Z",
+     "shell.execute_reply": "2025-09-24T15:58:30.263773Z"
     },
     "papermill": {
-     "duration": 0.807624,
-     "end_time": "2025-09-24T15:55:47.780308",
+     "duration": 0.76721,
+     "end_time": "2025-09-24T15:58:30.266360",
      "exception": false,
-     "start_time": "2025-09-24T15:55:46.972684",
+     "start_time": "2025-09-24T15:58:29.499150",
      "status": "completed"
     },
     "tags": []
@@ -268,13 +285,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15d76e87",
+   "id": "01876dae",
    "metadata": {
     "papermill": {
-     "duration": 0.00309,
-     "end_time": "2025-09-24T15:55:47.786997",
+     "duration": 0.003047,
+     "end_time": "2025-09-24T15:58:30.273069",
      "exception": false,
-     "start_time": "2025-09-24T15:55:47.783907",
+     "start_time": "2025-09-24T15:58:30.270022",
      "status": "completed"
     },
     "tags": []
@@ -286,19 +303,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b9f6d707",
+   "id": "7e3cd88b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-24T15:55:47.795178Z",
-     "iopub.status.busy": "2025-09-24T15:55:47.794831Z",
-     "iopub.status.idle": "2025-09-24T15:55:48.551849Z",
-     "shell.execute_reply": "2025-09-24T15:55:48.550938Z"
+     "iopub.execute_input": "2025-09-24T15:58:30.281377Z",
+     "iopub.status.busy": "2025-09-24T15:58:30.280404Z",
+     "iopub.status.idle": "2025-09-24T15:58:30.958426Z",
+     "shell.execute_reply": "2025-09-24T15:58:30.957198Z"
     },
     "papermill": {
-     "duration": 0.76337,
-     "end_time": "2025-09-24T15:55:48.553599",
+     "duration": 0.683656,
+     "end_time": "2025-09-24T15:58:30.960047",
      "exception": false,
-     "start_time": "2025-09-24T15:55:47.790229",
+     "start_time": "2025-09-24T15:58:30.276391",
      "status": "completed"
     },
     "tags": []
@@ -330,13 +347,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1cdf629",
+   "id": "131dc0ad",
    "metadata": {
     "papermill": {
-     "duration": 0.003142,
-     "end_time": "2025-09-24T15:55:48.560470",
+     "duration": 0.003198,
+     "end_time": "2025-09-24T15:58:30.966883",
      "exception": false,
-     "start_time": "2025-09-24T15:55:48.557328",
+     "start_time": "2025-09-24T15:58:30.963685",
      "status": "completed"
     },
     "tags": []
@@ -348,19 +365,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "923821f6",
+   "id": "0d841c84",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-24T15:55:48.568910Z",
-     "iopub.status.busy": "2025-09-24T15:55:48.568364Z",
-     "iopub.status.idle": "2025-09-24T15:55:48.899403Z",
-     "shell.execute_reply": "2025-09-24T15:55:48.898452Z"
+     "iopub.execute_input": "2025-09-24T15:58:30.975843Z",
+     "iopub.status.busy": "2025-09-24T15:58:30.975492Z",
+     "iopub.status.idle": "2025-09-24T15:58:31.268111Z",
+     "shell.execute_reply": "2025-09-24T15:58:31.267095Z"
     },
     "papermill": {
-     "duration": 0.338072,
-     "end_time": "2025-09-24T15:55:48.902010",
+     "duration": 0.298777,
+     "end_time": "2025-09-24T15:58:31.269946",
      "exception": false,
-     "start_time": "2025-09-24T15:55:48.563938",
+     "start_time": "2025-09-24T15:58:30.971169",
      "status": "completed"
     },
     "tags": []
@@ -407,13 +424,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f5ea022",
+   "id": "2e6dff99",
    "metadata": {
     "papermill": {
-     "duration": 0.007293,
-     "end_time": "2025-09-24T15:55:48.915934",
+     "duration": 0.003247,
+     "end_time": "2025-09-24T15:58:31.276798",
      "exception": false,
-     "start_time": "2025-09-24T15:55:48.908641",
+     "start_time": "2025-09-24T15:58:31.273551",
      "status": "completed"
     },
     "tags": []
@@ -425,19 +442,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e5df9699",
+   "id": "ad3e92bc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-24T15:55:48.928019Z",
-     "iopub.status.busy": "2025-09-24T15:55:48.927046Z",
-     "iopub.status.idle": "2025-09-24T15:55:51.688496Z",
-     "shell.execute_reply": "2025-09-24T15:55:51.687490Z"
+     "iopub.execute_input": "2025-09-24T15:58:31.284904Z",
+     "iopub.status.busy": "2025-09-24T15:58:31.284563Z",
+     "iopub.status.idle": "2025-09-24T15:58:33.628890Z",
+     "shell.execute_reply": "2025-09-24T15:58:33.627715Z"
     },
     "papermill": {
-     "duration": 2.769501,
-     "end_time": "2025-09-24T15:55:51.690234",
+     "duration": 2.350377,
+     "end_time": "2025-09-24T15:58:33.630622",
      "exception": false,
-     "start_time": "2025-09-24T15:55:48.920733",
+     "start_time": "2025-09-24T15:58:31.280245",
      "status": "completed"
     },
     "tags": []
@@ -507,14 +524,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 28.720087,
-   "end_time": "2025-09-24T15:55:54.167606",
+   "duration": 27.668315,
+   "end_time": "2025-09-24T15:58:36.404796",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2025-09-24T15:55:25.447519",
+   "start_time": "2025-09-24T15:58:08.736481",
    "version": "2.6.0"
   }
  },
