Kaggle Notebook | Real-World Experiments & Projects | Version 3

--- a/10. Real-World Experiments & Projects.ipynb
+++ b/10. Real-World Experiments & Projects.ipynb
@@ -2,43 +2,52 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f9a45e20",
+   "id": "114f96cd",
    "metadata": {
     "papermill": {
-     "duration": 0.003454,
-     "end_time": "2025-08-29T16:41:23.224154",
+     "duration": 0.003552,
+     "end_time": "2025-09-24T16:53:11.329361",
      "exception": false,
-     "start_time": "2025-08-29T16:41:23.220700",
+     "start_time": "2025-09-24T16:53:11.325809",
      "status": "completed"
     },
     "tags": []
    },
    "source": [
-    "# <center>**Lab Sheet-10**</center>\n",
-    "# <center>**Real-World Experiments & Projects**</center>"
+    "# <center>Lab Sheet-10</center>\n",
+    "# <center>Real-World Experiments & Projects</center>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6614d126",
+   "id": "4ac583d1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-29T16:41:23.232004Z",
-     "iopub.status.busy": "2025-08-29T16:41:23.231243Z",
-     "iopub.status.idle": "2025-08-29T16:41:30.175806Z",
-     "shell.execute_reply": "2025-08-29T16:41:30.174701Z"
+     "iopub.execute_input": "2025-09-24T16:53:11.337027Z",
+     "iopub.status.busy": "2025-09-24T16:53:11.336681Z",
+     "iopub.status.idle": "2025-09-24T16:53:17.966465Z",
+     "shell.execute_reply": "2025-09-24T16:53:17.965439Z"
     },
     "papermill": {
-     "duration": 6.950013,
-     "end_time": "2025-08-29T16:41:30.177426",
+     "duration": 6.635228,
+     "end_time": "2025-09-24T16:53:17.967931",
      "exception": false,
-     "start_time": "2025-08-29T16:41:23.227413",
+     "start_time": "2025-09-24T16:53:11.332703",
      "status": "completed"
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: Somesh Singh\n",
+      "Roll Number: 233025921\n"
+     ]
+    }
+   ],
    "source": [
     "# Saves plots to ./lab10_plots/\n",
     "import os\n",
@@ -57,6 +66,10 @@
     "torch.manual_seed(42)\n",
     "os.makedirs(\"lab10_plots\", exist_ok=True)\n",
     "\n",
+    "# Print the name and roll number\n",
+    "print(\"Name: Somesh Singh\")\n",
+    "print(\"Roll Number: 233025921\")\n",
+    "\n",
     "# ---------------------\n",
     "# Helper utilities\n",
     "# ---------------------\n",
@@ -66,13 +79,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12b65ce6",
+   "id": "178cd8b6",
    "metadata": {
     "papermill": {
-     "duration": 0.00265,
-     "end_time": "2025-08-29T16:41:30.183278",
+     "duration": 0.00273,
+     "end_time": "2025-09-24T16:53:17.973903",
      "exception": false,
-     "start_time": "2025-08-29T16:41:30.180628",
+     "start_time": "2025-09-24T16:53:17.971173",
      "status": "completed"
     },
     "tags": []
@@ -84,19 +97,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "72306f46",
+   "id": "43d86134",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-29T16:41:30.190598Z",
-     "iopub.status.busy": "2025-08-29T16:41:30.190164Z",
-     "iopub.status.idle": "2025-08-29T16:41:37.228163Z",
-     "shell.execute_reply": "2025-08-29T16:41:37.227387Z"
+     "iopub.execute_input": "2025-09-24T16:53:17.981705Z",
+     "iopub.status.busy": "2025-09-24T16:53:17.981271Z",
+     "iopub.status.idle": "2025-09-24T16:53:24.828730Z",
+     "shell.execute_reply": "2025-09-24T16:53:24.827838Z"
     },
     "papermill": {
-     "duration": 7.043404,
-     "end_time": "2025-08-29T16:41:37.229694",
+     "duration": 6.853596,
+     "end_time": "2025-09-24T16:53:24.830491",
      "exception": false,
-     "start_time": "2025-08-29T16:41:30.186290",
+     "start_time": "2025-09-24T16:53:17.976895",
      "status": "completed"
     },
     "tags": []
@@ -106,6 +119,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Name: Somesh Singh\n",
+      "Roll Number: 233025921\n",
       "Epoch 20/80 loss=0.1734 val_acc=0.9340\n",
       "Epoch 40/80 loss=0.0553 val_acc=0.9653\n",
       "Epoch 60/80 loss=0.0224 val_acc=0.9722\n",
@@ -115,7 +130,6 @@
     }
    ],
    "source": [
-    "\n",
     "digits = load_digits()\n",
     "X = digits.data         \n",
     "y = digits.target\n",
@@ -152,6 +166,10 @@
     "model = SimpleMLP(input_dim=64, hidden=64, n_classes=10, dropout=0.2)\n",
     "opt = optim.Adam(model.parameters(), lr=0.01, weight_decay=1e-4)\n",
     "loss_fn = nn.CrossEntropyLoss()\n",
+    "\n",
+    "# Print the name and roll number\n",
+    "print(\"Name: Somesh Singh\")\n",
+    "print(\"Roll Number: 233025921\")\n",
     "\n",
     "# train \n",
     "epochs = 80\n",
@@ -208,13 +226,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c06ad77d",
+   "id": "2fa94809",
    "metadata": {
     "papermill": {
-     "duration": 0.002736,
-     "end_time": "2025-08-29T16:41:37.235656",
+     "duration": 0.002754,
+     "end_time": "2025-09-24T16:53:24.836544",
      "exception": false,
-     "start_time": "2025-08-29T16:41:37.232920",
+     "start_time": "2025-09-24T16:53:24.833790",
      "status": "completed"
     },
     "tags": []
@@ -226,19 +244,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3f7f824d",
+   "id": "1cc1a6f6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-29T16:41:37.243028Z",
-     "iopub.status.busy": "2025-08-29T16:41:37.242605Z",
-     "iopub.status.idle": "2025-08-29T16:41:38.262095Z",
-     "shell.execute_reply": "2025-08-29T16:41:38.261234Z"
+     "iopub.execute_input": "2025-09-24T16:53:24.843816Z",
+     "iopub.status.busy": "2025-09-24T16:53:24.843283Z",
+     "iopub.status.idle": "2025-09-24T16:53:25.878680Z",
+     "shell.execute_reply": "2025-09-24T16:53:25.877947Z"
     },
     "papermill": {
-     "duration": 1.025259,
-     "end_time": "2025-08-29T16:41:38.263748",
+     "duration": 1.04091,
+     "end_time": "2025-09-24T16:53:25.880285",
      "exception": false,
-     "start_time": "2025-08-29T16:41:37.238489",
+     "start_time": "2025-09-24T16:53:24.839375",
      "status": "completed"
     },
     "tags": []
@@ -251,7 +269,9 @@
       "Sine fit epoch 150, loss=0.013560\n",
       "Sine fit epoch 300, loss=0.005471\n",
       "Sine fit epoch 450, loss=0.005219\n",
-      "Sine fit epoch 600, loss=0.005212\n"
+      "Sine fit epoch 600, loss=0.005212\n",
+      "Name: Somesh Singh\n",
+      "Roll Number: 233025921\n"
      ]
     }
    ],
@@ -305,6 +325,10 @@
     "with torch.no_grad():\n",
     "    y_pred_grid = model_sin(torch.tensor(x_grid, dtype=torch.float32)).numpy()\n",
     "\n",
+    "# Print the name and roll number\n",
+    "print(\"Name: Somesh Singh\")\n",
+    "print(\"Roll Number: 233025921\")\n",
+    "\n",
     "plt.figure()\n",
     "plt.plot(x_grid, np.sin(x_grid), label=\"true sin(x)\")\n",
     "plt.scatter(x_train, y_train_s, s=10, alpha=0.6, label=\"train (noisy)\")\n",
@@ -321,13 +345,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ceb23716",
+   "id": "4bc2caf9",
    "metadata": {
     "papermill": {
-     "duration": 0.003668,
-     "end_time": "2025-08-29T16:41:38.272875",
+     "duration": 0.003023,
+     "end_time": "2025-09-24T16:53:25.886717",
      "exception": false,
-     "start_time": "2025-08-29T16:41:38.269207",
+     "start_time": "2025-09-24T16:53:25.883694",
      "status": "completed"
     },
     "tags": []
@@ -339,19 +363,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0878f21c",
+   "id": "698c4ce6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-29T16:41:38.281584Z",
-     "iopub.status.busy": "2025-08-29T16:41:38.280835Z",
-     "iopub.status.idle": "2025-08-29T16:41:38.440645Z",
-     "shell.execute_reply": "2025-08-29T16:41:38.439698Z"
+     "iopub.execute_input": "2025-09-24T16:53:25.894482Z",
+     "iopub.status.busy": "2025-09-24T16:53:25.894136Z",
+     "iopub.status.idle": "2025-09-24T16:53:26.048688Z",
+     "shell.execute_reply": "2025-09-24T16:53:26.047622Z"
     },
     "papermill": {
-     "duration": 0.166127,
-     "end_time": "2025-08-29T16:41:38.442159",
+     "duration": 0.160721,
+     "end_time": "2025-09-24T16:53:26.050717",
      "exception": false,
-     "start_time": "2025-08-29T16:41:38.276032",
+     "start_time": "2025-09-24T16:53:25.889996",
      "status": "completed"
     },
     "tags": []
@@ -361,6 +385,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Name: Somesh Singh\n",
+      "Roll Number: 233025921\n",
       "match progression for seq0 (after noisy start): [False, False, False, False, False]\n"
      ]
     }
@@ -387,6 +413,10 @@
     "        W_trans += (x_tp1 @ x_t.T)   # outer product x_{t+1} * x_t^T\n",
     "# Optional normalization\n",
     "W_trans /= (num_sequences*(L-1))\n",
+    "\n",
+    "# Print the name and roll number\n",
+    "print(\"Name: Somesh Singh\")\n",
+    "print(\"Roll Number: 233025921\")\n",
     "\n",
     "# test recall: start from first vector and iterate\n",
     "def recall_sequence(W, x0, steps=10, noisy_flip_frac=0.0):\n",
@@ -420,13 +450,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13a96185",
+   "id": "5c97ea72",
    "metadata": {
     "papermill": {
-     "duration": 0.002797,
-     "end_time": "2025-08-29T16:41:38.448310",
+     "duration": 0.003402,
+     "end_time": "2025-09-24T16:53:26.058230",
      "exception": false,
-     "start_time": "2025-08-29T16:41:38.445513",
+     "start_time": "2025-09-24T16:53:26.054828",
      "status": "completed"
     },
     "tags": []
@@ -438,19 +468,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f5e0cd8a",
+   "id": "15fada77",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-29T16:41:38.456207Z",
-     "iopub.status.busy": "2025-08-29T16:41:38.455341Z",
-     "iopub.status.idle": "2025-08-29T16:41:38.913593Z",
-     "shell.execute_reply": "2025-08-29T16:41:38.912662Z"
+     "iopub.execute_input": "2025-09-24T16:53:26.066037Z",
+     "iopub.status.busy": "2025-09-24T16:53:26.065714Z",
+     "iopub.status.idle": "2025-09-24T16:53:26.529873Z",
+     "shell.execute_reply": "2025-09-24T16:53:26.528911Z"
     },
     "papermill": {
-     "duration": 0.463552,
-     "end_time": "2025-08-29T16:41:38.914949",
+     "duration": 0.469922,
+     "end_time": "2025-09-24T16:53:26.531488",
      "exception": false,
-     "start_time": "2025-08-29T16:41:38.451397",
+     "start_time": "2025-09-24T16:53:26.061566",
      "status": "completed"
     },
     "tags": []
@@ -461,6 +491,8 @@
      "output_type": "stream",
      "text": [
       "MLP -> Acc: 0.9722, Macro-F1: 0.9719, Macro ROC-AUC: 0.9983\n",
+      "Name: Somesh Singh\n",
+      "Roll Number: 233025921\n",
       "SVM -> Acc: 0.9750, Macro-F1: 0.9749, Macro ROC-AUC: 0.9995\n"
      ]
     }
@@ -475,6 +507,10 @@
     "y_test_bin = label_binarize(y_test, classes=np.arange(10))\n",
     "mlp_roc = roc_auc_score(y_test_bin, mlp_probs, average='macro', multi_class='ovr')\n",
     "print(f\"MLP -> Acc: {mlp_acc:.4f}, Macro-F1: {mlp_f1:.4f}, Macro ROC-AUC: {mlp_roc:.4f}\")\n",
+    "\n",
+    "# Print the name and roll number\n",
+    "print(\"Name: Somesh Singh\")\n",
+    "print(\"Roll Number: 233025921\")\n",
     "\n",
     "# SVM (with probability estimates)\n",
     "svm = SVC(kernel='rbf', probability=True, gamma='scale', C=5.0, random_state=0)\n",
@@ -499,13 +535,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e1d4c85",
+   "id": "4b679c6d",
    "metadata": {
     "papermill": {
-     "duration": 0.002961,
-     "end_time": "2025-08-29T16:41:38.921136",
+     "duration": 0.003167,
+     "end_time": "2025-09-24T16:53:26.538045",
      "exception": false,
-     "start_time": "2025-08-29T16:41:38.918175",
+     "start_time": "2025-09-24T16:53:26.534878",
      "status": "completed"
     },
     "tags": []
@@ -517,21 +553,21 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "08f88686",
+   "id": "eda7f55a",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2025-08-29T16:41:38.929315Z",
-     "iopub.status.busy": "2025-08-29T16:41:38.928388Z",
-     "iopub.status.idle": "2025-08-29T16:41:39.459325Z",
-     "shell.execute_reply": "2025-08-29T16:41:39.458400Z"
+     "iopub.execute_input": "2025-09-24T16:53:26.546038Z",
+     "iopub.status.busy": "2025-09-24T16:53:26.545715Z",
+     "iopub.status.idle": "2025-09-24T16:53:27.076812Z",
+     "shell.execute_reply": "2025-09-24T16:53:27.076073Z"
     },
     "papermill": {
-     "duration": 0.536544,
-     "end_time": "2025-08-29T16:41:39.460942",
+     "duration": 0.537372,
+     "end_time": "2025-09-24T16:53:27.078642",
      "exception": false,
-     "start_time": "2025-08-29T16:41:38.924398",
+     "start_time": "2025-09-24T16:53:26.541270",
      "status": "completed"
     },
     "tags": []
@@ -541,6 +577,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Name: Somesh Singh\n",
+      "Roll Number: 233025921\n",
       "PCA-based shallow NN test acc: 0.9639\n",
       "raw-pixel shallow NN test acc: 0.9722\n"
      ]
@@ -561,6 +599,10 @@
     "            nn.Linear(hidden, n_classes)\n",
     "        )\n",
     "    def forward(self,x): return self.net(x)\n",
+    "\n",
+    "# Print the name and roll number\n",
+    "print(\"Name: Somesh Singh\")\n",
+    "print(\"Roll Number: 233025921\")\n",
     "\n",
     "# train on PCA features\n",
     "Xt_pca = torch.tensor(X_train_pca, dtype=torch.float32)\n",
@@ -606,13 +648,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "436b303e",
+   "id": "ba62f0cc",
    "metadata": {
     "papermill": {
-     "duration": 0.002966,
-     "end_time": "2025-08-29T16:41:39.467249",
+     "duration": 0.003104,
+     "end_time": "2025-09-24T16:53:27.085288",
      "exception": false,
-     "start_time": "2025-08-29T16:41:39.464283",
+     "start_time": "2025-09-24T16:53:27.082184",
      "status": "completed"
     },
     "tags": []
@@ -626,19 +668,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "40dd0e37",
+   "id": "cc46b4c6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-29T16:41:39.475686Z",
-     "iopub.status.busy": "2025-08-29T16:41:39.475350Z",
-     "iopub.status.idle": "2025-08-29T16:41:39.481625Z",
-     "shell.execute_reply": "2025-08-29T16:41:39.480677Z"
+     "iopub.execute_input": "2025-09-24T16:53:27.094243Z",
+     "iopub.status.busy": "2025-09-24T16:53:27.093884Z",
+     "iopub.status.idle": "2025-09-24T16:53:27.101122Z",
+     "shell.execute_reply": "2025-09-24T16:53:27.100018Z"
     },
     "papermill": {
-     "duration": 0.011834,
-     "end_time": "2025-08-29T16:41:39.483127",
+     "duration": 0.01293,
+     "end_time": "2025-09-24T16:53:27.102600",
      "exception": false,
-     "start_time": "2025-08-29T16:41:39.471293",
+     "start_time": "2025-09-24T16:53:27.089670",
      "status": "completed"
     },
     "tags": []
@@ -653,6 +695,8 @@
       "  MLP -> Acc 0.9722, F1 0.9719, ROC-AUC 0.9983\n",
       "  SVM -> Acc 0.9750, F1 0.9749, ROC-AUC 0.9995\n",
       "PCA-based shallow NN acc: 0.9638888888888889  raw-pixel NN acc: 0.9722222222222222\n",
+      "Name: Somesh Singh\n",
+      "Roll Number: 233025921\n",
       "\n",
       "Saved plots (lab10_plots/):\n",
       "lab10_plots/loss.png\n",
@@ -667,12 +711,15 @@
     }
    ],
    "source": [
-    "\n",
     "print(\"MLP (digits) test acc, macro-F1:\", test_acc, test_f1)\n",
     "print(\"MLP vs SVM on digits ->\")\n",
     "print(f\"  MLP -> Acc {mlp_acc:.4f}, F1 {mlp_f1:.4f}, ROC-AUC {mlp_roc:.4f}\")\n",
     "print(f\"  SVM -> Acc {svm_acc:.4f}, F1 {svm_f1:.4f}, ROC-AUC {svm_roc:.4f}\")\n",
     "print(\"PCA-based shallow NN acc:\", acc_pca, \" raw-pixel NN acc:\", acc_raw)\n",
+    "\n",
+    "# Print the name and roll number\n",
+    "print(\"Name: Somesh Singh\")\n",
+    "print(\"Roll Number: 233025921\")\n",
     "\n",
     "print(\"\\nSaved plots (lab10_plots/):\")\n",
     "saved = [\n",
@@ -715,14 +762,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 23.368152,
-   "end_time": "2025-08-29T16:41:41.410175",
+   "duration": 23.52537,
+   "end_time": "2025-09-24T16:53:29.740572",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2025-08-29T16:41:18.042023",
+   "start_time": "2025-09-24T16:53:06.215202",
    "version": "2.6.0"
   }
  },
